<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#E6E3E3"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200sp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textDirection="rtl"
        android:textSize="80sp" />

    <LinearLayout
        android:id="@+id/linha1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#2A3439"
            android:text="@string/_1"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#2A3439"
            android:text="@string/_2"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#2A3439"
            android:text="@string/_3"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btnSomar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#FF5722"
            android:text="@string/somar"
            android:textColor="#272525"
            android:textSize="48sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linha2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#2A3439"
            android:text="@string/_4"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#2A3439"
            android:text="@string/_5"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#2A3439"
            android:text="@string/_6"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btnSubt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#FF5722"
            android:text="@string/subtracao"
            android:textColor="#272525"
            android:textSize="48sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linha3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#2A3439"
            android:text="@string/_7"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#2A3439"
            android:text="@string/_8"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#2A3439"
            android:text="@string/_9"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btnMult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#FF5722"
            android:text="*"
            android:textColor="#272525"
            android:textSize="48sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linha4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#FF5722"
            android:text="@string/c"
            android:textColor="#272525"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#2A3439"
            android:text="0"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btnResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#FF5722"
            android:text="="
            android:textColor="#272525"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btnDivisao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/material_emphasis_disabled_background"
            android:backgroundTint="#FF5722"
            android:text="/"
            android:textColor="#272525"
            android:textSize="48sp" />
    </LinearLayout>

</LinearLayout>